# ingestion-tools

./: .gitignore  README.md  manage.py  package.json  pyproject.toml  test_script.sh
backend/: manage.py  pyproject.toml
backend/data/: Chen - August Bridges.xlsx  Chen_Region 8 Dailies_Week of 11-9-25.xlsx
backend/doc_creator/: api_urls.py  asgi.py  settings.py  urls.py
backend/documents/: schemas.py
backend/documents/data/: Chen Region 8 Bridge Inspection Weekly Schedule - Week of 11-9-25.xlsx  R8_daily_log_template.xlsx
backend/documents/management/commands/: generate_sample.py
backend/documents/output/: test_daily_with_values.xlsm  test_with_entries.xlsm
backend/documents/templates/: base_doc.py  daily_logs.py  weekly_schedule.py
backend/inspections/: api.py  models.py
backend/inspections/management/commands/: seed_inspections.py
backend/inspections/migrations/: 0002_region_county_region.py
backend/output/: sample_schedule.xlsx
backend/src/: input_parser.py  logging_config.py  utils.py
backend/teams/: api.py
backend/teams/management/commands/: seed_teams.py
backend/teams/migrations/: 0002_employer_alter_personnel_cell_phone_and_more.py
doc_creator/: settings.py  urls.py  wsgi.py
documents/: creators.py
frontend/: index.html  package-lock.json  package.json
inspections/: admin.py  urls.py  views.py
output/: sample_schedule.xlsx  schedule1.xlsx  schedule_20251026.xlsx  schedule_20251102.xlsx  schedule_20251109.xlsx  schedule_20251116.xlsx  schedule_20251123.xlsx  schedule_20251130.xlsx
src/: base_classes.py  classes.py  (+3 more)
(+23 files in other folders)
