[project]
name = "p1"
version = "0.1.0"
description = "Data Ingestion Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langextract>=1.1.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pyproject-flake8>=7.0.0",
    "requests>=2.32.5",
]

[tool.flake8]
max-line-length = 120
